# agentfoundry-cli

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: af_maintenance.yml
agentfoundry_cli/: __init__.py  __main__.py  cli.py  parser.py
docs/: development.md  format.md  usage.md
examples/: example.af
repo-analysis-output/: dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
tests/: __init__.py  test_cli.py  test_cli_run.py  test_parser.py
